<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:layout_marginTop="40dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="70dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="70dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="230dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="-40dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            android:backgroundTint="@color/transparent_white"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_1" />

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_marginTop="-24dp"
            app:layout_constraintTop_toBottomOf="@id/imageCard"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/primeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/extra_10_off_nwith_prime"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/offerCard"
            app:layout_constraintEnd_toEndOf="@id/imageCard"
            app:layout_constraintStart_toStartOf="@id/imageCard"
            app:layout_constraintTop_toTopOf="@id/imageCard" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primeText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/childConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/right_guide"
            app:layout_constraintStart_toStartOf="@id/left_guide"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/offerCard"
                android:layout_width="270dp"
                android:layout_height="120dp"
                app:cardBackgroundColor="@color/orange"
                android:layout_marginHorizontal="6dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/childConstraint"
                app:strokeWidth="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/only_at_rs_58_week"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/planCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|bottom"
                    android:layout_marginTop="35dp"
                    app:cardBackgroundColor="@color/cream_orange"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeWidth="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/_1_month_plan_n_rs_245"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </com.google.android.material.card.MaterialCardView>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/offerText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/save_at_least_400_in_every_booking"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/offer"
                app:layout_constraintBottom_toTopOf="@+id/offerText2"
                app:layout_constraintStart_toStartOf="@id/offerText2"
                app:layout_constraintTop_toBottomOf="@id/offerCard" />

            <TextView
                android:id="@+id/offerText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_regular"
                android:singleLine="true"
                android:text="@string/recover_prime_fee_in_first_booking_itself"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/rupee"
                app:layout_constraintBottom_toTopOf="@+id/knowMore"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/knowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/know_more"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@id/offerText2"
                app:layout_constraintStart_toStartOf="@id/offerText2"
                app:layout_constraintTop_toBottomOf="@id/offerText2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/childConstraint">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/skipAndBook"
                android:layout_width="180dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/skip_amp_book"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="18sp"
                app:cornerRadius="15dp"
                app:strokeColor="@color/light_gray"
                app:strokeWidth="1.5dp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bePrimeBtn"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:background="@drawable/be_prime_gradient_btn"
                android:clickable="true"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:drawablePadding="0dp"
                android:focusable="true"
                android:fontFamily="@font/poppins_semibold"
                android:paddingHorizontal="30dp"
                android:singleLine="true"
                android:text="@string/be_prime"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/primeCircle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="0dp"
        android:elevation="10dp"
        android:paddingVertical="5dp"
        android:src="@drawable/crown_ic"
        app:layout_anchor="@+id/constraintLayout"
        app:layout_anchorGravity="top|center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>