<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".NewPrimeBottomSheet">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".07"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="70dp" />

    <ImageView
        android:id="@+id/primeCircle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/prime_icon"
        android:elevation="10dp"
        android:src="@drawable/crown_ic"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeAbleImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/img"
        app:layout_constraintBottom_toTopOf="@+id/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <View
        android:id="@+id/bg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeAbleImageView" />

    <TextView
        android:id="@+id/primeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/extra_10_off_nwith_prime"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/primeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/primeCircle" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintWidth_percent="0.5"
        android:background="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/primeText"
        app:layout_constraintBottom_toTopOf="@id/offerCard"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/offerCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/shapeAbleImageView"
        app:layout_constraintBottom_toBottomOf="@id/shapeAbleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:strokeWidth="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/only_at_rs_58_week"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/planCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="35dp"
            app:cardBackgroundColor="@color/cream_orange"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeWidth="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/_1_month_plan_n_rs_245"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>